# rinha_de_backend_2024_q1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  nginx.conf  pyproject.toml
rinha_capivara/: app.py  database.py  models.py  schemas.py
